--- a/index.html
+++ b/index.html
@@ -812,13 +812,13 @@
             <div class="project-visuals glow-card">
                 <button class="nav-btn prev magnetic-btn" onclick="scrollGallery(this, -1)">&#10094;</button>
                 <div class="gallery-grid">
-                    <div class="gallery-item" onclick="openModal(this)"><img src="Note Origin/1.jpg" alt="Note Origin 主界面"></div>
-                    <div class="gallery-item" onclick="openModal(this)"><img src="Note Origin/2.jpg" alt="Note Origin AI 对话"></div>
-                    <div class="gallery-item" onclick="openModal(this)"><img src="Note Origin/3.jpg" alt="Note Origin 地图模式"></div>
-                    <div class="gallery-item" onclick="openModal(this)"><img src="Note Origin/4.jpg" alt="Note Origin 笔记编辑"></div>
-                    <div class="gallery-item" onclick="openModal(this)"><img src="Note Origin/5.jpg" alt="Note Origin 待办事项"></div>
-                    <div class="gallery-item" onclick="openModal(this)"><img src="Note Origin/6.jpg" alt="Note Origin 设置界面"></div>
-                    <div class="gallery-item" onclick="openModal(this)"><img src="Note Origin/7.jpg" alt="Note Origin 旅行规划"></div>
+                    <div class="gallery-item" onclick="openModal(this)"><img src="Note_Origin/1.jpg" alt="Note Origin 主界面"></div>
+                    <div class="gallery-item" onclick="openModal(this)"><img src="Note_Origin/2.jpg" alt="Note Origin AI 对话"></div>
+                    <div class="gallery-item" onclick="openModal(this)"><img src="Note_Origin/3.jpg" alt="Note Origin 地图模式"></div>
+                    <div class="gallery-item" onclick="openModal(this)"><img src="Note_Origin/4.jpg" alt="Note Origin 笔记编辑"></div>
+                    <div class="gallery-item" onclick="openModal(this)"><img src="Note_Origin/5.jpg" alt="Note Origin 待办事项"></div>
+                    <div class="gallery-item" onclick="openModal(this)"><img src="Note_Origin/6.jpg" alt="Note Origin 设置界面"></div>
+                    <div class="gallery-item" onclick="openModal(this)"><img src="Note_Origin/7.jpg" alt="Note Origin 旅行规划"></div>
                 </div>
                 <button class="nav-btn next magnetic-btn" onclick="scrollGallery(this, 1)">&#10095;</button>
             </div>
